# tmma_projet01

./: CMakeLists.txt  main.cpp
cpp/: funcs.cpp
includes/: funcs.h
